--- a/src/casita_digital_03/style.css
+++ b/src/casita_digital_03/style.css
@@ -7,6 +7,7 @@
   transition: all 0.3s;
 }
 
+
 body{
     width: 100%;
     height:100vh;
@@ -79,9 +80,9 @@ body{
   top: 50px;
 }
 #mensaje{
-  font-size: xx-large;
-  padding: 15px;
+  font-size: x-large;
   border-radius: 10px;
+  padding: 15px;
   color: white;
   background-color: #4B4B4B;
 } 
@@ -103,7 +104,6 @@ select{
   width: 100%;
   height: 150px;
   background-color: green;
-  background-size: cover;
   position: absolute;
   bottom: 30px;
 }
