--- a/src/casita_digital_06/style.css
+++ b/src/casita_digital_06/style.css
@@ -41,6 +41,7 @@ body {
   width: 190px;
   height: 130px;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-evenly;
   background-image: url("https://assets.digitalhouse.com/content/ar/sch/imagen-ladrillo-cdigital.jpeg");
@@ -52,7 +53,27 @@ body {
   border-radius: 20px 20px 0 0;
   margin: 5px 0;
 }
-
+.binary-select__char div{
+  order: -1;
+}
+.binary-select__char div span{
+  background-color: #1919bf;
+  border: 1px solid #000000;
+  border-radius: 50%;
+  padding: 5px;
+  font-size: .8em;
+  color: #ffffff;
+}
+.check-false{
+  background-color: #ffffff;  
+  border: 1px solid #000000;
+  border-radius: 50%;
+  padding: 5px;
+  font-size: .5em;
+}
+.binary-select__char div{
+  width: 100%;
+}
 .binary-select__char::before {
   content: "";
   position: absolute;
