--- a/src/casita_digital_01/style.css
+++ b/src/casita_digital_01/style.css
@@ -7,10 +7,14 @@
   transition: all 0.3s;
 }
 
+html,body {
+  height: 100%;
+  overflow: hidden; 
+}
+
 
 body{
     width: 100%;
-    height:100vh;
     background-image: url("https://i.ibb.co/HF7rrmQ/estrellas.webp");
     background-size: cover;
     background-repeat: no-repeat;
