--- a/src/casita_digital_05_en/style.css
+++ b/src/casita_digital_05_en/style.css
@@ -7,10 +7,14 @@
   transition: all 0.3s;
 }
 
+html,body {
+  height: 100%;
+  overflow: hidden; 
+}
+
 
 body{
     width: 100%;
-    height:100vh;
     background-image: url("https://i.ibb.co/HF7rrmQ/estrellas.webp");
     background-size: cover;
     background-repeat: no-repeat;
@@ -80,9 +84,9 @@ body{
   top: 50px;
 }
 #mensaje{
-  font-size: xx-large;
-  padding: 15px;
+  font-size: x-large;
   border-radius: 10px;
+  padding: 15px;
   color: white;
   background-color: #4B4B4B;
 } 
