--- a/src/casita_digital_06/style.css
+++ b/src/casita_digital_06/style.css
@@ -56,6 +56,10 @@ body {
   width: 27.3px;
 }
 
+.char-preview .check-true{
+  font-size: .8em;
+}
+
 #casita {
   margin: 0 auto;
   height: 100vh;
@@ -95,6 +99,17 @@ body {
   font-size: .8em;
   color: #ffffff;
   font-weight: normal;
+}
+.check-false{
+  background-color: #ffffff;  
+  border: 1px solid #000000;
+  border-radius: 50%;
+  padding: 5px;
+  font-size: .5em;
+  order: 2;
+}
+.check-true{
+  order: 2;
 }
 .binary-select__char div{
   width: 100%;
